lib_LTLIBRARIES = libglst.la
libglst_la_SOURCES = GLST_Factory.cpp GLST_Factory.h GLST_gl.h GLST_Glyph.cpp \
	GLST_Glyph.h GLST_std.h GLST_Surface.cpp GLST_Surface.h GLST_Text.cpp \
	GLST_Text.h GLST_unicode.cpp GLST_unicode.h utf8.h utf8/checked.h \
	utf8/core.h utf8/unchecked.h
libglst_la_LDFLAGS = -version-info 0:0:0
